add_subdirectory(Commands)

set(MSCL_MICROSTRAIN_DISPLACEMENT_FILES
    "${CMAKE_CURRENT_LIST_DIR}/DisplacementModels.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/DisplacementModels.h"
    "${CMAKE_CURRENT_LIST_DIR}/DisplacementNode.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/DisplacementNode.h"
)

# Filter and add the source files to the target
set(MSCL_MICROSTRAIN_DISPLACEMENT_SOURCES ${MSCL_MICROSTRAIN_DISPLACEMENT_FILES})
list(FILTER MSCL_MICROSTRAIN_DISPLACEMENT_SOURCES INCLUDE REGEX "^.*\\.(c|cpp)$")
target_sources("${MSCL_LIBRARY}" PRIVATE "${MSCL_MICROSTRAIN_DISPLACEMENT_SOURCES}")

# Filter and add the header files to the target using file sets
set(MSCL_MICROSTRAIN_DISPLACEMENT_HEADERS ${MSCL_MICROSTRAIN_DISPLACEMENT_FILES})
list(FILTER MSCL_MICROSTRAIN_DISPLACEMENT_HEADERS INCLUDE REGEX "^.*\\.(h|hpp)$")
target_sources("${MSCL_LIBRARY}" PUBLIC
    FILE_SET "${MSCL_HEADER_FILE_SET}"
    FILES "${MSCL_MICROSTRAIN_DISPLACEMENT_HEADERS}"
)
