add_subdirectory(Commands)
add_subdirectory(Configuration)
add_subdirectory(Features)
add_subdirectory(Packets)

set(MSCL_MICROSTRAIN_WIRELESS_SOURCES
    "${CMAKE_CURRENT_LIST_DIR}/ArmedDataloggingNetwork.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/ArmedDataloggingNetwork.h"
    "${CMAKE_CURRENT_LIST_DIR}/BaseStation.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/BaseStation.h"
    "${CMAKE_CURRENT_LIST_DIR}/BaseStationAnalogPair.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/BaseStationAnalogPair.h"
    "${CMAKE_CURRENT_LIST_DIR}/BaseStationButton.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/BaseStationButton.h"
    "${CMAKE_CURRENT_LIST_DIR}/BaseStationInfo.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/BaseStationInfo.h"
    "${CMAKE_CURRENT_LIST_DIR}/BaseStation_Impl.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/BaseStation_Impl.h"
    "${CMAKE_CURRENT_LIST_DIR}/CalCoefficients.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/CalCoefficients.h"
    "${CMAKE_CURRENT_LIST_DIR}/ChannelMask.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/ChannelMask.h"
    "${CMAKE_CURRENT_LIST_DIR}/DatalogDownloader.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/DatalogDownloader.h"
    "${CMAKE_CURRENT_LIST_DIR}/DataSweep.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/DataSweep.h"
    "${CMAKE_CURRENT_LIST_DIR}/DeliveryStopFlags.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/DeliveryStopFlags.h"
    "${CMAKE_CURRENT_LIST_DIR}/LoggedDataSweep.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/LoggedDataSweep.h"
    "${CMAKE_CURRENT_LIST_DIR}/MockBaseStation_Impl.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/MockBaseStation_Impl.h"
    "${CMAKE_CURRENT_LIST_DIR}/MockWirelessNode_Impl.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/MockWirelessNode_Impl.h"
    "${CMAKE_CURRENT_LIST_DIR}/NodeCommTimes.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/NodeCommTimes.h"
    "${CMAKE_CURRENT_LIST_DIR}/NodeDiscovery.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/NodeDiscovery.h"
    "${CMAKE_CURRENT_LIST_DIR}/NodeMemory.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/NodeMemory.h"
    "${CMAKE_CURRENT_LIST_DIR}/NodeMemory_v1.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/NodeMemory_v1.h"
    "${CMAKE_CURRENT_LIST_DIR}/NodeMemory_v2.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/NodeMemory_v2.h"
    "${CMAKE_CURRENT_LIST_DIR}/RadioFeatures.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/RadioFeatures.h"
    "${CMAKE_CURRENT_LIST_DIR}/StructuralHealth.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/StructuralHealth.h"
    "${CMAKE_CURRENT_LIST_DIR}/SyncNetworkInfo.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/SyncNetworkInfo.h"
    "${CMAKE_CURRENT_LIST_DIR}/SyncSamplingFormulas.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/SyncSamplingFormulas.h"
    "${CMAKE_CURRENT_LIST_DIR}/SyncSamplingNetwork.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/SyncSamplingNetwork.h"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessChannel.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessChannel.h"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessDataPoint.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessDataPoint.h"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessModels.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessModels.h"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessNode.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessNode.h"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessNode_Impl.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessNode_Impl.h"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessParser.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessParser.h"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessTypes.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/WirelessTypes.h"
)

set(MSCL_SOURCES ${MSCL_SOURCES} ${MSCL_MICROSTRAIN_WIRELESS_SOURCES} PARENT_SCOPE)
